@@ -3,11 +3,36 @@
 var sajax_debug_mode = false;
 var sajax_request_type = "GET";
 
+/**
+* if sajax_debug_mode is true, this function outputs given the message into 
+* the element with id = sajax_debug; if no such element exists in the document, 
+* it is injected.
+*/
 function sajax_debug(text) {
-	if (sajax_debug_mode)
-		alert("RSD: " + text)
+	if (!sajax_debug_mode) return;
+	
+	var e= document.getElementById('sajax_debug');
+	
+	if (!e) {
+		e= document.createElement("p");
+		e.className= 'sajax_debug';
+		e.id= 'sajax_debug';
+		
+		var b= document.getElementsByTagName("body")[0];
+		
+		if (b.firstChild) b.insertBefore(e, b.firstChild);
+		else b.appendChild(e);
+	}
+	
+	var m= document.createElement("div");
+	m.appendChild( document.createTextNode( text ) );
+	
+	e.appendChild( m );
 }
 
+/**
+* compatibility wrapper for creating a new XMLHttpRequest object. 
+*/
 function sajax_init_object() {
 	sajax_debug("sajax_init_object() called..")
 	var A;
@@ -27,8 +52,23 @@ function sajax_init_object() {
 	return A;
 }
 
-
-function sajax_do_call(func_name, args) {
+/**
+* Perform an ajax call to mediawiki. Calls are handeled by AjaxDispatcher.php
+*   func_name - the name of the function to call. Must be registered in $wgAjaxExportList
+*   args - an array of arguments to that function
+*   target - the target that will handle the result of the call. If this is a function,
+*            if will be called with the XMLHttpRequest as a parameter; if it's an input
+*            element, its value will be set to the resultText; if it's another type of
+*            element, its innerHTML will be set to the resultText.
+*
+* Example:
+*    sajax_do_call('doFoo', [1, 2, 3], document.getElementById("showFoo"));
+*
+* This will call the doFoo function via MediaWiki's AjaxDispatcher, with
+* (1, 2, 3) as the parameter list, and will show the result in the element
+* with id = showFoo
+*/
+function sajax_do_call(func_name, args, target) {
 	var i, x, n;
 	var uri;
 	var post_data;
@@ -38,16 +78,21 @@ function sajax_do_call(func_name, args) {
 			uri = uri + "?rs=" + escape(func_name);
 		else
 			uri = uri + "&rs=" + escape(func_name);
-		for (i = 0; i < args.length-1; i++)
+		for (i = 0; i < args.length; i++)
 			uri = uri + "&rsargs[]=" + escape(args[i]);
 		//uri = uri + "&rsrnd=" + new Date().getTime();
 		post_data = null;
 	} else {
 		post_data = "rs=" + escape(func_name);
-		for (i = 0; i < args.length-1; i++)
+		for (i = 0; i < args.length; i++)
 			post_data = post_data + "&rsargs[]=" + escape(args[i]);
 	}
 	x = sajax_init_object();
+	if (!x) {
+		alert("AJAX not supported");
+		return false;
+	}
+	
 	x.open(sajax_request_type, uri, true);
 	if (sajax_request_type == "POST") {
 		x.setRequestHeader("Method", "POST " + uri + " HTTP/1.1");
@@ -58,18 +103,33 @@ function sajax_do_call(func_name, args) {
 	x.onreadystatechange = function() {
 		if (x.readyState != 4)
 			return;
-		sajax_debug("received " + x.responseText);
-		var status;
-		var data;
-		status = x.responseText.charAt(0);
-		data = x.responseText.substring(2);
-		if (status == "-")
-			alert("Error: " + data);
-		else
-			args[args.length-1](data);
+			
+		sajax_debug("received (" + x.status + " " + x.statusText + ") " + x.responseText);
+		
+		//if (x.status != 200)
+		//	alert("Error: " + x.status + " " + x.statusText + ": " + x.responseText);
+		//else
+		
+		if ( typeof( target ) == 'function' ) {
+			target( x );
+		}
+		else if ( typeof( target ) == 'object' ) {
+			if ( target.tagName == 'INPUT' ) {
+				if (x.status == 200) target.value= x.responseText;
+				//else alert("Error: " + x.status + " " + x.statusText + " (" + x.responseText + ")");
+			}
+			else {
+				if (x.status == 200) target.innerHTML = x.responseText;
+				else target.innerHTML= "<div class='error'>Error: " + x.status + " " + x.statusText + " (" + x.responseText + ")</div>";
+			}
+		}
+		else {
+			alert("bad target for sajax_do_call: not a function or object: " + target);
+		}
 	}
+	
+	sajax_debug(func_name + " uri = " + uri + " / post = " + post_data);
 	x.send(post_data);
-	sajax_debug(func_name + " uri = " + uri + "/post = " + post_data);
 	sajax_debug(func_name + " waiting..");
 	delete x;
 }
